fix issues: 1. clicking menu items jumps to corresponding sections 2. can show item detail block 3. ajust spaces among texts

--- a/badromance/assets/css/br_page.css
+++ b/badromance/assets/css/br_page.css
@@ -2,6 +2,10 @@ body {
   font-family: 'helvetica', '黑体';
 }
 
+a {
+  text-decoration: none;
+}
+
 .br-size-base {
   font-size: 1em;
 }
@@ -21,6 +25,7 @@ body {
   margin-left: -480px;
   position: absolute;
   width: 960px;
+  top: 15em;
 }
 
 #loading {
@@ -107,7 +112,6 @@ body {
   background-position: -334px -47px;
   height: 44px;
   width: 44px;
-  top: -0.2em;
 }
 
 .br-icon-email-black {
@@ -120,7 +124,7 @@ body {
   width: 140px;
 }
 
-.br-icon-shop-design {
+.br-icon-shop-sale {
   background-position: -691px -185px;
   height: 144px;
   width: 144px;
@@ -143,15 +147,25 @@ body {
   display: table;
   float: right;
   padding: 0;
-  margin: 2.8em 2.3em 0 0;
+  margin-top: 2.8em;
 }
 
 .br-menu li {
   display: table-cell;
   padding: 0 1.5em;
+  vertical-align: bottom;
+}
+
+.br-menu li:first-child {
+  padding-left: 0;
+}
+
+.br-menu li:last-child {
+  padding-right: 0;
 }
 
 .br-menu li a {
+  color: #000000;
   position: relative;
 }
 
@@ -169,6 +183,51 @@ body {
   margin: 0;
 }
 
+.br-menu .br-popover-action {
+  display: block;
+  width: 44px;
+  height: 44px;
+}
+
+/* popover */
+.br-popover {
+  background-color: #E83838;
+  border-radius: 4px;
+  display: none;
+  color: #FFFFFF;
+  padding: 1em;
+  position: fixed;
+  z-index: 900;
+}
+
+.br-popover .br-popover-close {
+  cursor: pointer;
+  font-weight: bold;
+  position: absolute;
+  padding: 0.2em 0.2em 0.5em;
+  right: 0;
+  top: 0;
+}
+
+.br-popover a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.br-triangle {
+  border: 10px solid transparent;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  margin-left: -10px;
+}
+
+.br-triangle-up {
+  border-bottom-color: #E83838;
+  top: -20px;
+}
+
 #scene {
   height: 20000px;
 }
@@ -177,13 +236,10 @@ body {
   background-color: #FFFFFF;
 }
 
-#home .br-home {
-  position: fixed;
+#home .br-section-inner {
   height: 20em;
-  top: 40%;
   left: 50%;
   margin-left: -10em;
-  margin-top: -5em;
   width: 20em;
 }
 
@@ -206,15 +262,22 @@ body {
   padding: 0 0.5em;
 }
 
+#home-head .br-section-inner {
+  top: 0;
+}
+
+/* shop */
 #shop {
   background-color: #FF3333;
   color: #FFFFFF;
   height: 100%;
   overflow: hidden;
 }
-
 #shop p {
   margin: 0.5em;
+}
+#shop.br-section {
+  z-index: 110;
 }
 #shop .br-shop-text-cn-1, #shop .br-shop-text-cn-2 {
   font-size: 1.2em;
@@ -231,57 +294,86 @@ body {
   letter-spacing: 0.1em;
   padding-left: 0.1em;
 }
-
 #shop .br-icon {
   position: static;
 }
-
 #shop .br-section-inner {
   margin-left: -250px;
-  top: 20%;
   width: 500px;
 }
-
 #shop .br-shop-link {
   display: block;
 }
 
-#design .br-design-head {
-  font-size: 1.4em;
-  margin-top: 10em;
-  margin-bottom: 5em;
+#shop.br-section {
+  z-index: 120;
 }
 
-#design .br-head-text-cn {
+/* sale */
+#sale.br-section {
+  z-index: 110;
+}
+#sale .br-sale-head {
+  font-size: 1.4em;
+  margin-bottom: 5em;
+}
+#sale .br-head-text-cn {
   letter-spacing: 0.7em;
   padding-left: 0.7em;
 }
-
-#design .br-head-text-en {
+#sale .br-head-text-en {
   letter-spacing: 0.1em;
   padding-left: 0.1em;
 }
-
-#design .br-design-content {
+#sale .br-sale-content {
   background-color: #FFFFFF;
   min-height: 10em;
   position: relative;
   top: 7em;
 }
-
-#design .br-design-content-inner {
+#sale .br-sale-content-inner {
   min-height: 400px;
   overflow: hidden;
 }
-
-#design .br-design-scroll-images img {
+#sale .br-sale-scroll-images img {
   width: 100%;
 }
-
-#design.br-section {
-  z-index: 90;
+#sale .br-sale-scroll-images > .tm-row {
+  margin-bottom: 5em;
+}
+#sale .br-item-image-block {
+  cursor: pointer;
+  position: relative;
+}
+#sale .br-item-image-block .br-image-cover {
+  background-color: #F9F2E9;
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
+/* items */
+.br-items .br-section-inner {
+  z-index: 110;
+}
+.br-item img {
+  width: 300px;
+  height: 300px;
+}
+.br-item .br-item-close {
+  cursor: pointer;
+  position: absolute;
+  padding: 0.5em;
+  font-size: 1.2em;
+  top: 0;
+  right: 0;
+}
+.br-item .br-item-close:hover {
+  color: #FF3333;
+}
 #contact-footer {
   bottom: 0;
   color: #FFFFFF;
